--- a/components/index.html
+++ b/components/index.html
@@ -96,6 +96,15 @@
                         </div>
                 </div>
         </section>
+    <!-- About -->
+        <section>
+            <p class="section-header" id="about">About Section</p>
+                <div class="card">
+                    <p class="card__title">.about-section</p>
+                    <p>image:</p>
+                    <p>code:</p>
+                </div>
+        </section>
     <!-- Portfolio -->
         <section>
             <p class="section-header" id="portfolio">Portfolio Section</p>
