--- a/components/index.html
+++ b/components/index.html
@@ -15,6 +15,7 @@
                 <li class="sidenav__item"><a href="index.html#atoms">Atoms</a></li>
                 <li class="sidenav__item"><a href="index.html#nav">Navigation</a></li>
                 <li class="sidenav__item"><a href="index.html#hero">Hero Section</a></li>
+                <li class="sidenav__item"><a href="index.html#about">About Section</a></li>
                 <li class="sidenav__item"><a href="index.html#portfolio">Portfolio Section</a></li>
             </ul>
         </div>
@@ -42,6 +43,10 @@
                     <div class="grid-item">
                         <img src="img/yellow.png" class="img-small" alt="yellow">
                         <p>#FCDD3A</p>    
+                    </div>
+                    <div class="grid-item">
+                        <img src="img/darkblue.png" class="img-small" alt="dark blue">
+                        <p>#053584</p>
                     </div>
                 </div>
         </section>
@@ -102,7 +107,12 @@
                 <div class="card">
                     <p class="card__title">.about-section</p>
                     <p>image:</p>
+                        <img src="img/about-section.png">
                     <p>code:</p>
+                        <div class="about-section">
+                            <p class="about-section__header"><span class="about-section__header-blue">Who we are.</span> Okalpha is a concept and detail-focused animation studio based in the middle of nowhere.</p>
+                            <p class="about-section__body">After a small lifetime in advertising, we loathe mediocrity and prine for the pretty. We're proud of keeping things simple: conceptualise engaging ideas and execute them beautifully. If you'd like something to move, we'd love to help with that. If you don't, we'd love for you to follow us on our small journey through the galaxy and into a pile of intriguing work.</p>
+                        </div>
                 </div>
         </section>
     <!-- Portfolio -->
