--- a/components/index.html
+++ b/components/index.html
@@ -17,6 +17,9 @@
                 <li class="sidenav__item"><a href="index.html#hero">Hero Section</a></li>
                 <li class="sidenav__item"><a href="index.html#about">About Section</a></li>
                 <li class="sidenav__item"><a href="index.html#portfolio">Portfolio Section</a></li>
+                <li class="sidenav__item"><a href="index.html#services">Services Section</a></li>
+                <li class="sidenav__item"><a href="index.html#team">Team Section</a></li>
+                <li class="sidenav__item"><a href="index.html#footer">Footer</a></li>
             </ul>
         </div>
     </nav>
@@ -106,12 +109,12 @@
             <p class="section-header" id="about">About Section</p>
                 <div class="card">
                     <p class="card__title">.about-section</p>
-                    <p>image:</p>
-                        <img src="img/about-section.png">
-                    <p>code:</p>
-                        <div class="about-section">
-                            <p class="about-section__header"><span class="about-section__header-blue">Who we are.</span> Okalpha is a concept and detail-focused animation studio based in the middle of nowhere.</p>
-                            <p class="about-section__body">After a small lifetime in advertising, we loathe mediocrity and prine for the pretty. We're proud of keeping things simple: conceptualise engaging ideas and execute them beautifully. If you'd like something to move, we'd love to help with that. If you don't, we'd love for you to follow us on our small journey through the galaxy and into a pile of intriguing work.</p>
+                        <p>image:</p>
+                            <img src="img/about-section.png">
+                        <p>code:</p>
+                            <div class="about-section">
+                                <p class="about-section__header"><span class="about-section__header-blue">Who we are.</span> Okalpha is a concept and detail-focused animation studio based in the middle of nowhere.</p>
+                                <p class="about-section__body">After a small lifetime in advertising, we loathe mediocrity and prine for the pretty. We're proud of keeping things simple: conceptualise engaging ideas and execute them beautifully. If you'd like something to move, we'd love to help with that. If you don't, we'd love for you to follow us on our small journey through the galaxy and into a pile of intriguing work.</p>
                         </div>
                 </div>
         </section>
@@ -146,6 +149,55 @@
                                 </li>
                             </ul>
                         </div>
+                </div>
+        </section>
+    <!-- Services -->
+        <section>
+            <p class="section-header" id="services">Services Section</p>
+                <div class="card">
+                    <p class="card__title">.services-section</p>
+                        <p>image:</p>
+                            <img src="img/services-section.png">
+                        <p>code:</p>
+                            <div class="services-section">
+                                <p class="services-section__header">Services.</p>
+                                <p class="services-section__list">Storyboarding. Art Direction. Creative Direction. Sound Design. Film. Editing. Post Production. Illustration. 2D Animation. 3D Animation. UI Animation. Product Rendering. Photography. Storyboarding. Art Direction. Creative Direction. Sound Design. Film. Editing.</p>
+                            </div>
+                </div>
+        </section>
+    <!-- Team -->
+        <section>
+            <p class="section-header" id="team">Team Section</p>
+                <div class="card">
+                    <p class="card__title">.team-section</p>
+                        <p>image:</p>
+                            <img src="img/team-section.png">
+                        <p>code:</p>
+                            <div class="team-section">
+                                <p class="team-section__header">Team Okalpha.</p>
+                                <div class="team-section__container">
+                                    <div class="team-section__card">
+                                        <img src="img/headshot1.png" class="team-section__img">
+                                        <p class="team-section__title">Grant Campbell.</p>
+                                        <p class="team-section__title-sub">Founder and Animator</p>
+                                    </div>
+                                    <div class="team-section__card">
+                                        <img src="img/headshot2.png" class="team-section__img">
+                                        <p class="team-section__title">Titan the Labrador.</p>
+                                        <p class="team-section__title-sub">Wellness Manager</p>
+                                    </div>
+                                </div>
+                            </div>
+                    </div>
+        </section>
+    <!-- Footer -->
+        <section>
+            <p class="section-header" id="footer">Footer Section</p>
+                <div class="card">
+                    <p class="card__title">.footer</p>
+                        <p>image:</p>
+                            <img src="img/footer.png">
+                        <p>code:</p>
                 </div>
         </section>
     </div>
