--- a/components/index.html
+++ b/components/index.html
@@ -45,23 +45,35 @@
                     </div>
                     <div class="grid-item">
                         <img src="img/yellow.png" class="img-small" alt="yellow">
-                        <p>#FCDD3A</p>    
+                        <p>#FCDD3A</p>
                     </div>
                     <div class="grid-item">
                         <img src="img/darkblue.png" class="img-small" alt="dark blue">
                         <p>#053584</p>
                     </div>
+                    <div class="grid-item">
+                        <img src="img/darkyellow.png" class="img-small" alt="dark yellow">
+                        <p>#ebc720</p>
                 </div>
         </section>
     <!-- Atoms -->
         <section>
             <h4 class="section-header" id="atoms">Atoms</h4>
                 <div class="card">
-                    <p class="card__title">Arrows</p>
+                    <p class="card__title">.arrow--blue</p>
                     <p>image:</p>
                         <img src="img/hero-section__icon.png" class="img-small" alt="arrow">
                     <p>code:</p>
-                        <p class="arrow">&#8595</p>
+                        <p class="arrow--blue">&#8595</p>
+                </div>
+                <div class="card">
+                      <p class="card__title">.arrow--white</p>
+                      <p>image:</p>
+                        <img src="img/footer__icon.png" class="img-small" alt="arrow--white">
+                      <p>code:</p>
+                        <div class="arrow--white__background">
+                          <p class="arrow--white">&#8593</p>
+                        </div>
                 </div>
         </section>
     <!-- Main Nav -->
@@ -72,7 +84,6 @@
                     <p>image:</p>
                     <img src="img/nav-bar.png" alt="nav bar">
                     <p>code:</p>
-                    <!-- make it match -->
                         <div class="container">
                             <section class="nav-bar">
                                 <p class="nav-bar__title">okalpha</p>
@@ -100,7 +111,7 @@
                             <img src="img/hero-background.png">
                             <p class="hero-section__text">Hey.</p>
                             <p class="hero-section__text hero-section__text-sub">We're ok.</p>
-                            <p class="arrow hero-section__icon">&#8595</p>
+                            <p class="arrow--blue hero-section__icon">&#8595</p>
                         </div>
                 </div>
         </section>
@@ -135,7 +146,7 @@
                                             <p class="portfolio-section__list-item--sub">Project Headers</p>
                                             <p class="portfolio-section__list-item">MakeRegin.</p>
                                         </div>
-                                        <p class="arrow portfolio-section__icon">&#8595</p>
+                                        <p class="arrow--blue portfolio-section__icon">&#8595</p>
                                     </div>
                                 </li>
                                 <li>
@@ -144,7 +155,7 @@
                                             <p class="portfolio-section__list-item--sub">Product Animations</p>
                                             <p class="portfolio-section__list-item">IndieFin.</p>
                                         </div>
-                                        <p class="arrow portfolio-section__icon">&#8595</p>
+                                        <p class="arrow--blue portfolio-section__icon">&#8595</p>
                                     </div>
                                 </li>
                             </ul>
@@ -181,7 +192,7 @@
                                         <p class="team-section__title">Grant Campbell.</p>
                                         <p class="team-section__title-sub">Founder and Animator</p>
                                     </div>
-                                    <div class="team-section__card">
+                                    <div class="team-section__card team-section__card--offset">
                                         <img src="img/headshot2.png" class="team-section__img">
                                         <p class="team-section__title">Titan the Labrador.</p>
                                         <p class="team-section__title-sub">Wellness Manager</p>
@@ -198,6 +209,23 @@
                         <p>image:</p>
                             <img src="img/footer.png">
                         <p>code:</p>
+                          <div class="footer-section">
+                            <img src="img/footer-background.png" class="footer__img">
+                              <div class="flex-container">
+                                <p class="footer__header">Say Hello.</p>
+                                <p class="footer__item-title">Email:</p>
+                                <p class="footer__item-email">info@okalpha.co</p>
+                                <p class="footer__item-title">Address:</p>
+                                <p class="footer__item-address">
+                                  3rd Floor<br>
+                                  The Exchange Building<br>
+                                  28 St Georges Mall<br>
+                                  Cape Town<br>
+                                  South Africa<br>
+                                  8001</p>
+                              </div>
+                            <p class="arrow--white left">&#8593</p>
+                          </div>
                 </div>
         </section>
     </div>
