--- a/components/index.html
+++ b/components/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html lang="en">
 <head>
     <meta charset=utf-8>
     <title>Okalpha Web Components</title>
@@ -54,7 +54,8 @@
                     <div class="grid-item">
                         <img src="img/darkyellow.png" class="img-small" alt="dark yellow">
                         <p>#ebc720</p>
-                </div>
+                    </div>
+                  </div>
         </section>
     <!-- Atoms -->
         <section>
@@ -64,7 +65,7 @@
                     <p>image:</p>
                         <img src="img/hero-section__icon.png" class="img-small" alt="arrow">
                     <p>code:</p>
-                        <p class="arrow--blue">&#8595</p>
+                        <p class="arrow--blue">&#8595;</p>
                 </div>
                 <div class="card">
                       <p class="card__title">.arrow--white</p>
@@ -72,7 +73,7 @@
                         <img src="img/footer__icon.png" class="img-small" alt="arrow--white">
                       <p>code:</p>
                         <div class="arrow--white__background">
-                          <p class="arrow--white">&#8593</p>
+                          <p class="arrow--white">&#8593;</p>
                         </div>
                 </div>
         </section>
@@ -108,10 +109,10 @@
                         <img src="img/hero-section.png" alt="hero section">
                     <p>code:</p>
                         <div class="hero-section">
-                            <img src="img/hero-background.png">
+                            <img src="img/hero-background.png" alt="hero section background image">
                             <p class="hero-section__text">Hey.</p>
                             <p class="hero-section__text hero-section__text-sub">We're ok.</p>
-                            <p class="arrow--blue hero-section__icon">&#8595</p>
+                            <p class="arrow--blue hero-section__icon">&#8595;</p>
                         </div>
                 </div>
         </section>
@@ -121,7 +122,7 @@
                 <div class="card">
                     <p class="card__title">.about-section</p>
                         <p>image:</p>
-                            <img src="img/about-section.png">
+                            <img src="img/about-section.png" alt="About section image">
                         <p>code:</p>
                             <div class="about-section">
                                 <p class="about-section__header"><span class="about-section__header-blue">Who we are.</span> Okalpha is a concept and detail-focused animation studio based in the middle of nowhere.</p>
@@ -146,7 +147,7 @@
                                             <p class="portfolio-section__list-item--sub">Project Headers</p>
                                             <p class="portfolio-section__list-item">MakeRegin.</p>
                                         </div>
-                                        <p class="arrow--blue portfolio-section__icon">&#8595</p>
+                                        <p class="arrow--blue portfolio-section__icon">&#8595;</p>
                                     </div>
                                 </li>
                                 <li>
@@ -155,7 +156,7 @@
                                             <p class="portfolio-section__list-item--sub">Product Animations</p>
                                             <p class="portfolio-section__list-item">IndieFin.</p>
                                         </div>
-                                        <p class="arrow--blue portfolio-section__icon">&#8595</p>
+                                        <p class="arrow--blue portfolio-section__icon">&#8595;</p>
                                     </div>
                                 </li>
                             </ul>
@@ -168,7 +169,7 @@
                 <div class="card">
                     <p class="card__title">.services-section</p>
                         <p>image:</p>
-                            <img src="img/services-section.png">
+                            <img src="img/services-section.png" alt="services section image">
                         <p>code:</p>
                             <div class="services-section">
                                 <p class="services-section__header">Services.</p>
@@ -182,18 +183,18 @@
                 <div class="card">
                     <p class="card__title">.team-section</p>
                         <p>image:</p>
-                            <img src="img/team-section.png">
+                            <img src="img/team-section.png" alt="team section image">
                         <p>code:</p>
                             <div class="team-section">
                                 <p class="team-section__header">Team Okalpha.</p>
                                 <div class="team-section__container">
                                     <div class="team-section__card">
-                                        <img src="img/headshot1.png" class="team-section__img">
+                                        <img src="img/headshot1.png" class="team-section__img" alt="Grant's headshot">
                                         <p class="team-section__title">Grant Campbell.</p>
                                         <p class="team-section__title-sub">Founder and Animator</p>
                                     </div>
                                     <div class="team-section__card team-section__card--offset">
-                                        <img src="img/headshot2.png" class="team-section__img">
+                                        <img src="img/headshot2.png" class="team-section__img" alt="Titan's headshot">
                                         <p class="team-section__title">Titan the Labrador.</p>
                                         <p class="team-section__title-sub">Wellness Manager</p>
                                     </div>
@@ -207,10 +208,10 @@
                 <div class="card">
                     <p class="card__title">.footer</p>
                         <p>image:</p>
-                            <img src="img/footer.png">
+                            <img src="img/footer.png" alt="footer section image">
                         <p>code:</p>
                           <div class="footer-section">
-                            <img src="img/footer-background.png" class="footer__img">
+                            <img src="img/footer-background.png" class="footer__img" alt="footer section background">
                               <div class="flex-container">
                                 <p class="footer__header">Say Hello.</p>
                                 <p class="footer__item-title">Email:</p>
