--- a/components/index.html
+++ b/components/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset=utf-8>
     <title>Okalpha Web Components</title>
@@ -225,7 +226,7 @@
                                   South Africa<br>
                                   8001</p>
                               </div>
-                            <p class="arrow--white left">&#8593</p>
+                            <p class="arrow--white left">&#8593;</p>
                           </div>
                 </div>
         </section>
