--- a/css/main.css
+++ b/css/main.css
@@ -38,29 +38,25 @@ img {
     color: var(--blue);
 }
 
-.arrow--white__background {
-  background-color: var(--yellow);
-  margin-right: 13rem;
-}
-
 .arrow--white {
-    font-size: 5rem;
+    font-size: 8rem;
     color: white;
 }
 
 /* navbar component */
 .container {
-    margin: 2rem 3rem;
+    margin: 2rem 6rem;
 }
 
 .nav-bar {
     display: flex;
-    border-bottom: 4px solid black;
+    border-bottom: 6px solid black;
     justify-content: space-between;
 }
 
 .nav-bar__title {
     font-family: 'Poppins', sans-serif;
+    font-size: 2rem;
     padding-bottom: 1rem;
 }
 
@@ -73,9 +69,11 @@ img {
 .nav-bar__list--item a {
     text-decoration: none;
     color: black;
+    font-size: 1.2rem;
     font-family: sans-serif;
     letter-spacing: 1px;
-    padding: 0 1rem;
+    padding: 0 2rem;
+    margin-bottom: 0;
 }
 
 .nav-bar__list--item-active a {
@@ -90,29 +88,31 @@ a:hover {
 
 .hero-section {
     position: relative;
+    margin: 0;
+    padding: 0;
 }
 
 .hero-section__text {
     margin: 0;
-    font-size: 3rem;
+    font-size: 9rem;
     font-weight: bolder;
     position: absolute;
     z-index: 1;
     top: 5rem;
-    left: 2rem;
+    left: 6rem;
     display: inline-block;
 }
 
 .hero-section__text-sub {
-    top: 8.5rem;
-    left: 2rem;
+    top: 14.5rem;
+    left: 6rem;
 }
 
 .hero-section__icon {
     position: absolute;
-    top: 10rem;
-    left: 2rem;
-    font-size: 3rem;
+    top: 17rem;
+    left: 6rem;
+    font-size: 7rem;
 }
 
 /* about component */
@@ -121,47 +121,46 @@ a:hover {
 }
 
 .about-section__header {
-    padding: 5rem 4rem 2rem 2rem;
-    font-size: 2rem;
+    padding: 5rem 6rem 2rem 6rem;
+    font-size: 4rem;
     color: white;
-    line-height: 2.5rem;
+    line-height: 4.5rem;
 }
 
 .about-section__header-blue {
-    font-size: 2rem;
+    font-size: 4rem;
     color: var(--darkblue);
 }
 
 .about-section__body {
     color: white;
-    padding: 0 2rem 2rem 2rem;
-    font-size: .8rem;
+    padding: 0 8rem 7rem 6rem;
+    font-size: 1.2rem;
     letter-spacing: 1px;
-    line-height: 1.3rem;
+    line-height: 2rem;
     font-weight: lighter;
 }
 
 /* portfolio component */
 
 .portfolio-section {
-
 }
 
 .portfolio-section__list {
     list-style-type: none;
-    margin: 0;
+    padding: 6rem;
 }
 
 .portfolio-section__list-title {
     color: var(--blue);
-    font-size: 2rem;
+    font-size: 9rem;
     font-weight: bolder;
-    border-bottom: 3px solid var(--blue);
+    border-bottom: 6px solid var(--blue);
 }
 
 .portfolio-section__list-item {
     color: var(--red);
-    font-size: 1.5rem;
+    font-size: 5rem;
     font-weight: bolder;
     padding: 0 0 2rem 0;
     margin: 0;
@@ -170,14 +169,14 @@ a:hover {
 
 .portfolio-section__list-item--sub {
     color: var(--red);
-    font-size: .3rem;
+    font-size: 1.5rem;
     margin: 2rem 0 0 0;
 }
 
 .portfolio-section-flex {
     display: flex;
     justify-content: space-between;
-    border-bottom: 3px solid var(--blue);
+    border-bottom: 6px solid var(--blue);
 }
 
 .portfolio-section__title {
@@ -185,40 +184,42 @@ a:hover {
 }
 
 .portfolio-section__icon {
-    font-size: 2rem;
+    font-size: 4rem;
 }
 
 /* services component */
 .services-section {
     background-color: var(--blue);
+    padding: 4rem 6rem;
 }
 
 .services-section__header {
     color: white;
     padding: 1rem 0;
-    font-size: 3rem;
-    border-bottom: 5rem double var(--yellow);
+    font-size: 9rem;
+    border-bottom: 4rem solid var(--yellow);
     margin: 2rem;
 }
 
 .services-section__list {
-    border-top: 1.5rem solid var(--yellow);
+    border-top: 4rem solid var(--yellow);
     margin: 2rem;
     color: white;
-    padding: 1rem 0;
-    font-size: 1.3rem;
-    line-height: 1.8rem;
+    padding: 5rem 0;
+    font-size: 3rem;
+    line-height: 4.5rem;
     text-align: justify;
 }
 
 /* team component */
 .team-section {
     background-color: var(--red);
+    padding: 4rem 6rem;
 }
 
 .team-section__header {
     color: white;
-    font-size: 3rem;
+    font-size: 8rem;
     padding: 2rem 2rem 0 2rem;
     margin: 0;
 }
@@ -229,20 +230,21 @@ a:hover {
 }
 
 .team-section__card {
-    padding: 2rem;
+    padding: 5rem;
 }
 
 .team-section__card--offset {
-    padding-top: 10rem;
+    padding-top: 20rem;
 }
 
 .team-section__img {
-    box-shadow: -5px 5px 1px 1px var(--darkyellow);
+    box-shadow: -15px 15px 1px 1px var(--darkyellow);
 }
 
 .team-section__title {
     color: white;
-    padding: 1rem 0 .3rem 0;
+    font-size: 2.5rem;
+    padding: 2rem 0 1rem 0;
     margin: 0;
 }
 
@@ -251,7 +253,7 @@ a:hover {
     opacity: .6;
     padding: 0;
     margin: 0;
-    font-size: .5rem;
+    font-size: 1.5rem;
 }
 
 /* footer component */
@@ -260,14 +262,14 @@ a:hover {
 }
 
 .footer__img {
-  height: 20rem;
+  height: 50rem;
 }
 
 .flex-container {
   z-index: 1;
   position: absolute;
   top: 1rem;
-  padding: 2rem;
+  padding: 4rem 6rem;
   margin: 0;
   display: flex;
   flex-direction: column;
@@ -275,37 +277,37 @@ a:hover {
 
 .footer__header {
   color: white;
-  font-size: 3rem;
-  padding: 0 7rem .5rem 0;
+  font-size: 9rem;
+  padding: 0 20rem 1rem 0;
   margin: 0;
-  border-bottom: 3px solid white;
+  border-bottom: 6px solid white;
 }
 
 .footer__item-title {
   color: white;
   margin: 0;
-  font-size: .7rem;
+  font-size: 1.5rem;
   font-weight: bolder;
-  padding-top: 1rem;
+  padding-top: 3rem;
 }
 
 .footer__item-email {
   color: white;
   margin: 0;
-  font-size: 1rem;
+  font-size: 3rem;
   padding-top: .2rem;
 }
 
 .footer__item-address {
   color: white;
   margin: 0;
-  font-size: .7rem;
-  line-height: 17px;
+  font-size: 1.5rem;
+  line-height: 50px;
 }
 
 .left {
   position: absolute;
   z-index: 1;
-  top: 8rem;
-  right: 1rem;
+  top: 25rem;
+  right: 10rem;
 }
